BNB23350: add files

--- a/60_NetworkProtocolAndArchitectures/60_07_Security/60_07_01_总览.md
+++ b/60_NetworkProtocolAndArchitectures/60_07_Security/60_07_01_总览.md
@@ -228,8 +228,179 @@ non-repudiation:
 computationally expensive to public-key-encrypt long messages
 goal: fixed-length, easy- to-compute digital “fingerprint”
 - apply hash function H to m, get fixed size message digest, H(m)
+- ![](image/Pasted%20image%2020250108170405.png)
 
 Hash function properties:
 - many-to-1
 - produces fixed-size msg digest (fingerprint)
 - given message digest x, computationally infeasible to find m such that x = H(m)
+
+
+Internet checksum: poor crypto hash function
+- produces fixed length digest (16-bit sum) of message
+- is many-to-one
+- ![](image/Pasted%20image%2020250108170514.png)
+
+
+Digital signature = signed message digest
+![](image/Pasted%20image%2020250108170533.png)
+
+
+
+Hash function algorithms
+- MD5 hash function widely used (RFC 1321)
+    - computes 128-bit message digest in 4-step process.
+    - arbitrary 128-bit string x, appears difficult to construct msg m whose MD5 hash is equal to x
+- SHA-1 is also used
+    - US standard [NIST, FIPS PUB 180-1]
+    - 160-bit message digest
+
+
+## 3.3 Public key Certification Authorities (CA)
+
+certification authority (CA): binds public key to particular entity, E
+▪ entity (person, website, router) registers its public key with CE provides “proof of identity” to CA
+• CA creates certificate binding identity E to E’s public key
+• certificate containing E’s public key digitally signed by CA: CA says “this is E’s public key”
+
+![](image/Pasted%20image%2020250108170853.png)
+
+
+when Alice wants Bob’s public key:
+• gets Bob’s certificate (Bob or elsewhere)
+• apply CA’s public key to Bob’s certificate, get Bob’s public key
+
+![](image/Pasted%20image%2020250108170942.png)
+
+
+# 4 Securing e-mail
+
+confidentiality
+![](image/Pasted%20image%2020250108171358.png)
+
+![](image/Pasted%20image%2020250108171408.png)
+
+
+integrity, authentication
+![](image/Pasted%20image%2020250108171522.png)
+
+![](image/Pasted%20image%2020250108171534.png)
+
+
+
+
+# 5 Securing TCP connections: TLS
+
+这部分的笔记 直接记载 tls 处
+
+
+# 6 Network layer security: IPsec
+
+
+这部分的笔记 直接记载 network layer 处 
+
+
+# 7 Security in wireless and mobile networks
+
+
+这里略去 不做笔记 , 因为不重要 
+
+
+# 8 Operational security: 
+
+## 8.1 firewalls
+
+Firewall: isolates organization’s internal network from larger Internet, allowing some packets to pass, blocking others
+![](image/Pasted%20image%2020250108203846.png)
+
+Firewalls: why
+- prevent denial of service attacks:
+    - SYN flooding: attacker establishes many bogus TCP connections, no resources left for “real” connections
+- prevent illegal modification/access of internal data
+    - e.g., attacker replaces CIA’s homepage with something else
+- allow only authorized access to inside network
+    - set of authenticated users/hosts
+
+three types of firewalls:
+- stateless packet filters
+- stateful packet filters
+- application gateways
+
+### 8.1.1 Stateless packet filtering
+
+![](image/Pasted%20image%2020250108204245.png)
+
+- internal network connected to Internet via router firewall
+- filters packet-by-packet, decision to forward/drop packet based on:
+    - source IP address, destination IP address
+    - TCP/UDP source, destination port numbers
+    - ICMP message type
+    - TCP SYN, ACK bits
+
+- example 1: block incoming and outgoing datagrams with IP protocol field = 17 and with either source or dest port = 23
+    - result: all incoming, outgoing UDP flows and telnet connections are blocked
+- example 2: block inbound TCP segments with ACK=0
+    - result: prevents external clients from making TCP connections with internal clients, but allows internal clients to connect to outside
+
+![](image/Pasted%20image%2020250108204338.png)
+
+Access Control Lists
+ACL: table of rules, applied top to bottom to incoming packets: (action, condition) pairs: looks like OpenFlow forwarding (Ch. 4)!
+![](image/Pasted%20image%2020250108204403.png)
+
+### 8.1.2 Stateful packet filtering
+- stateless packet filter: heavy handed tool
+    - admits packets that “make no sense,” e.g., dest port = 80, ACK bit set, even though no TCP connection established:
+    - ![](image/Pasted%20image%2020250108204429.png)
+
+- stateful packet filter: track status of every TCP connection
+    - track connection setup (SYN), teardown (FIN): determine whether incoming, outgoing packets “makes sense”
+    - timeout inactive connections at firewall: no longer admit packets
+
+
+ACL augmented to indicate need to check connection state table before admitting packet
+![](image/Pasted%20image%2020250108204623.png)
+
+
+### 8.1.3 Aplication Gateways 
+
+- filter packets on application data as well as on IP/TCP/UDP fields.
+- example: allow select internal users to telnet outside
+![](image/Pasted%20image%2020250108204659.png)
+
+1. require all telnet users to telnet through gateway.
+2. for authorized users, gateway sets up telnet connection to dest host
+    1. gateway relays data between 2 connections
+3. router filter blocks all telnet connections not originating from gateway
+
+### 8.1.4 Limitations of firewalls, gateways
+
+IP spoofing: router can’t know if data “really” comes from claimed source
+if multiple apps need special treatment, each has own app. gateway
+client software must know how to contact gateway: e.g., must set IP address of proxy in Web browser
+
+filters often use all or nothing policy for UDP
+tradeoff: degree of communication with outside world, level of security
+many highly protected sites still suffer from attacks
+
+
+## 8.2 IDS:  Intrusion detection systems
+
+
+packet filtering:
+- operates on TCP/IP headers only
+- no correlation check among sessions
+
+IDS: intrusion detection system
+- deep packet inspection: look at packet contents (e.g., check character strings in packet against database of known virus, attack strings)
+- examine correlation among multiple packets
+    - port scanning
+    - network mapping
+    - DoS attack
+
+
+multiple IDSs: different types of checking at different locations
+![](image/Pasted%20image%2020250108205000.png)
+
+
+
