BNB23350: add files

--- a/60_NetworkProtocolAndArchitectures/60_01_Intro/60_01_01_重要概念.md
+++ b/60_NetworkProtocolAndArchitectures/60_01_Intro/60_01_01_重要概念.md
@@ -71,18 +71,29 @@ Application Layer
 - ISO/OSI-Referenzmodell dient lediglich als Modell für konzeptionelle Betrachtungen der Datenkommunikation hat kaum praktische Relevanz
 - **_TCP/IP-Modell_**: in der Praxis als De-Facto-Standard etabliertes und akzeptiertes Modell
 
-Host-to-Network Layer
+Host-to-Network Layer/ Link Layer
+- Link Layer regelt die physische und logische Kommunikation innerhalb eines lokalen Netzwerks und befasst sich mit der Übertragung von Datenrahmen (Frames) über die physische Verbindung.
 - **_Bitübertragungsschicht_**: Übertragung von Bits über ein Kommunikationsmedium (lokales Netz) durch Manipulation von Signalen in Abhängigkeit der zu übertragenden Bits (**_Modulation_** beim Sender) bzw. Erzeugung von Bits abhängig von den empfangenen Signalen (**_Demodulation_** beim Empfänger)
 - **_Sicherungsschicht_**: Aufteilung des Datenstroms in **_Rahmen_** (**_Frames_**) und Steuerung des Medienzugriffs sowie Fehlererkennung und -korrektur 
 - Beispiele: IEEE 802.3 (Ethernet) , IEEE 802.11 (WLAN), Digital Subscriber Line (DSL), LTE Air Interface
+- [Ethernet](https://en.wikipedia.org/wiki/Ethernet#Evolution): Standard für kabelgebundene lokale Netzwerke
+- [Address Resolution Protocol](https://en.wikipedia.org/wiki/Address_Resolution_Protocol) übersetzt IP-Adressen in physische MAC-Adressen.
+- [Digital subscriber line](https://en.wikipedia.org/wiki/Digital_subscriber_line) bietet schnellen Internetzugang über Telefonleitungen.
+- [ISDN](https://en.wikipedia.org/wiki/ISDN) ermöglicht digitale Datenübertragung über das Telefonnetz.
+
 
 Network Layer
+- ist für die Weiterleitung von Datenpaketen über verschiedene Netzwerke hinweg verantwortlich, einschließlich Adressierung und Routing.
 - Kommunikation zwischen Rechnern die an verschiedenen lokalen Netzen angeschlossen sind
 - **_Wegewahl_** (Routing) und _**Adressierung**_
 - **_Paket_**- statt **_Leitungsvermittlung_**: Daten werden in mehreren Paketen übertragen, die über unterschiedliche Wege zum Empfänger gelangen
+- [Internet Protocol](https://en.wikipedia.org/wiki/Internet_Protocol): verantwortlich für die Adressierung und das Routing von Datenpaketen
+- [Internet Control Message Protocol](https://en.wikipedia.org/wiki/Internet_Control_Message_Protocol) diagnostiziert Netzwerkprobleme.
+- [Internet Group Management Protocol](https://en.wikipedia.org/wiki/Internet_Group_Management_Protocol) unterstützt die Verwaltung von Multicast-Gruppen in Netzwerken.
 
 
 Transport Layer
+- Transport Layer gewährleistet eine zuverlässige, schnelle Übertragung von Daten zwischen Endsystemen und kümmert sich um Fehlerkontrolle, Datenflusssteuerung und Verbindungen.
 - Erweiterung der Basisfunktionen der Vermittlungsschicht
 - Erstes Schicht die ausschließlich Ende-zu-Ende arbeitet, d.h. es gib in der Regel keine Protokollinstanzen im Netz
 - **_Transmission Control Protocol_** (_**TCP**_):  zuverlässiges, verbindungsorientiertes Protokoll zur fehlerfreien Ende-zu-Ende-Übertragung eines Datenstroms
@@ -90,11 +101,16 @@ Transport Layer
 - _**QUIC**_ (ehemals für _**Quick UDP Internet Connections**_): neues Multiplex-Protokoll zur Einrichtung mehrerer Ende-zu-Ende-Verbindungen basierend auf UDP
 
 Application Layer
+- Application Layer bietet die Schnittstelle zwischen Netzwerk und Anwendungen und definiert Protokolle für spezifische Datenübertragungsaufgaben (z. B. Webzugriff, E-Mails).
 - Protokollschicht für bestimmte Anwendungen
 - Ermöglicht Aufbau, Aufrechterhalten und Abbau von Sitzungen
 - Verhandlung über Syntax und Semantik der ausgetauschten Daten
 - **_Sitzung_**: zeitlich begrenztes Verhältnis mit definiertem Zustand zwischen verteilten Anwendungen, inklusive Wiedererkennung des Kommunikationspartners und Synchronisation
 - Beispiele: **_HyperText Transfer Protocol_** (_**HTTP**_), _**File Transfer Protocol**_ (_**FTP**_), _**Simple Mail Transfer Protocol**_ (_**SMTP**_), _**Domain Name System**_ (_**DNS**_)
+    - [HTTPS](https://en.wikipedia.org/wiki/HTTPS) überträgt Webseiteninhalte im Internet.
+    - [File Transfer Protocol](https://en.wikipedia.org/wiki/File_Transfer_Protocol) ermöglicht Dateiübertragungen zwischen Geräten.
+    - [Simple Mail Transfer Protocol](https://en.wikipedia.org/wiki/Simple_Mail_Transfer_Protocol): zuständig für das Senden von E-Mails
+    - [Internet Message Access Protocol](https://en.wikipedia.org/wiki/Internet_Message_Access_Protocol) ermöglicht das Abrufen und Verwalten von E-Mails auf dem Server.
 
 
 # 3 Protocol 
