BNB23350: add files

--- a/60_NetworkProtocolAndArchitectures/60_02_ApplicationLayer/60_02_03_ApplicationLayer_TLS/60_02_01_01_TLS基础.md
+++ b/60_NetworkProtocolAndArchitectures/60_02_ApplicationLayer/60_02_03_ApplicationLayer_TLS/60_02_01_01_TLS基础.md
@@ -47,6 +47,20 @@ Asymmetrische Verschlüsselung
 - Der Empfänger berechnet anhand derselben Hash-Funktion einen Digest von der übertragenden Nachricht
 - Sind berechneter und empfangener Digest identisch, ist der Sender authentifiziert und die Integrität der Nachricht ist sichergestellt
 
+---
+
+![](image/8b957429-95fd-4e4b-aa43-e15fbbe82f93.webp)
+
+1. Sender erstellt Nachricht mit Inhalt.
+2. Mathematische Berechnung, genannt Hashfunktion wird auf Nachricht angewendet, um einen Digest zu generieren.
+3. Sender benutz seinen privaten Schlüssel, um den Digest zu verschlüsseln, woraus sich die digitale Signatur ergibt - niemand kann die digitale Signatur des Senders replizieren.
+4. Sender verschlüsselt sowohl die originale Nachricht als auch die digitale Signatur mit dem öffentlichen Schlüssel des Empfängers.
+5. Das verschlüsselte Bündel aus Nachricht und digitaler Signatur wird an den Empfänger übertragen.
+6. Der Empfänger nutzt seinen privaten Schlüssel, um das empfangene Bündel zu entschlüsseln.
+7. Der Empfänger nutzt den öffentlichen Schlüssel des Senders, um die digitale Signatur zu entschlüsseln und den Digest der Originalnachricht zu extrahieren.
+8. Mithilfe der selben Hashfunktion erstellt der Empfänger einen Digest der empfangenen und entschlüsselten Nachricht.
+9. Der Empfänger vergleicht diesen Digest mit dem der Originalnachricht, um die Authentität der empfangenen Nachricht zu verifizieren.
+
 
 # 3 Digitales Zertifikat
 
@@ -295,10 +309,10 @@ CA: Certificate Authority
 上图中第二个4 是多余的 
 
 在 阶段3 的 握手阶段， 
-1. 用户李四 使用 阶段3 的 初始阶段 获得的 用户x 的公钥。 用户李四 用 用户x 的公钥  来加密 用户李四 想给用户x 的指令 
-2. 用户x 使用自己的私钥 去解密. 
-3. 用户x 把想要 回复给 用户李四 的内容:   回复的内容的明文 + 数字签名 ( 就是用 用户x自己私钥 加密明文后 得到的密文) + 用户x 的数字证书
-4. 用户2 得到上面东西后 
+10. 用户李四 使用 阶段3 的 初始阶段 获得的 用户x 的公钥。 用户李四 用 用户x 的公钥  来加密 用户李四 想给用户x 的指令 
+11. 用户x 使用自己的私钥 去解密. 
+12. 用户x 把想要 回复给 用户李四 的内容:   回复的内容的明文 + 数字签名 ( 就是用 用户x自己私钥 加密明文后 得到的密文) + 用户x 的数字证书
+13. 用户2 得到上面东西后 
     1. 用ca 公钥 解密用户x 的数字证书， 看看用户x 是不是争取的用户
     2. 用用户x的公钥 解密 数字证书， 得到解密后的 明文
     3. 讲解密后的明文 和  直接得到的加密后的明文 比较， 看看消息有没有被篡改
